--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -172,19 +172,8 @@ and RC versions of an upcoming @var{x.y.0} release are available from
 the four-week period prior to the release.
 
 Note that @samp{https:} is required, and that the SSL certificate for
-the Subversion server of the R project is
-
-@example
-Certificate information:
- - Hostname: svn.r-project.org
- - Valid: from Jul 16 08:10:01 2004 GMT until Jul 14 08:10:01 2014 GMT
- - Issuer: Department of Mathematics, ETH Zurich, Zurich, Switzerland, CH
- - Fingerprint: c9:5d:eb:f9:f2:56:d1:04:ba:44:61:f8:64:6b:d9:33:3f:93:6e:ad
-@end example
-
-@noindent
-(currently, there is no ``trusted certificate'').  You can accept this
-certificate permanently and will not be asked about it anymore.
+the Subversion server of the R project should be recognized as from a
+trusted source.
 
 Note that retrieving the sources by e.g.@: @command{wget -r} or
 @command{svn export} from that URL will not work: the Subversion
@@ -372,14 +361,14 @@ As from @R{} 2.10.0, by default @HTML{} help pages are created when
 needed rather than being built at install time.
 
 If you need to disable the server and want HTML help, there is the
-option to continue to build @HTML{} pages at when packages are installed
+option to continue to build @HTML{} pages when packages are installed
 (including those installed with @R{}).  This is enabled by the
 @command{configure} option @option{--enable-prebuilt-html}.  Whether
 @command{R CMD INSTALL} (and hence @code{install.packages}) pre-builds
 @HTML{} pages is determined by looking at the @R{} installation and is
 reported by @command{R CMD INSTALL --help}: it can be overridden by
 specifying one of the @command{INSTALL} options @option{--html} or
-@option{-no-html}.
+@option{--no-html}.
 
 The server is disabled by setting the environment variable
 @enindex R_DISABLE_HTTPD
@@ -484,10 +473,12 @@ completely incorrect glyphs so you need to examine the logs carefully.
 The default can be overridden by setting the environment variables
 @enindex R_RD4DVI
 @enindex R_RD4PDF
-@env{R_RD4PDF} and @env{R_RD4DVI}.  (On Unix, these will be picked up
-at install time.)  The default value for @env{R_RD4PDF} is
-@samp{times,hyper}: omit @samp{hyper} if you do not want hyperlinks,
-e.g.@: for printing.  The default for @env{R_RD4DVI} is @samp{ae}.
+@env{R_RD4PDF} and @env{R_RD4DVI}.  (On Unix-alikes, these will be
+picked up at install time and stored in @file{etc/Renviron}, but can
+still be overridden when the manuals are built.)  The default value for
+@env{R_RD4PDF} is @samp{times,hyper}: omit @samp{hyper} if you do not
+want hyperlinks, e.g.@: for printing.  The default for @env{R_RD4DVI} is
+@samp{ae}.
 
 
 @node Installation, Uninstallation, Making the manuals, Installing R under Unix-alikes
@@ -542,7 +533,7 @@ the option @option{--prefix}, as in
 @end example
 
 @noindent
-This causes @command{make install} to install the @R{} executable to
+This causes @command{make install} to install the @R{} script to
 @file{/where/you/want/R/to/go/bin}, and so on.  The prefix of the
 installation directories can be seen in the status message that is
 displayed at the end of @command{configure}.  You can install into
@@ -724,9 +715,12 @@ wise to use explicit names for each, and you may also need to set
 When sub-architectures are used the version of @command{Rscript} in
 e.g.@: @file{/usr/bin} will be the last installed, but
 architecture-specific versions will be available in e.g.@:
-@file{/usr/lib64/R/bin/exec@var{R_ARCH}}.  Normally all installed
+@file{/usr/lib64/R/bin/exec$@{@var{R_ARCH}@}}.  Normally all installed
 architectures will run on the platform so the architecture of
-@command{Rscript} does not matter.
+@command{Rscript} itself does not matter.  The executable
+@command{Rscript} will run the @command{R} script, and at the time the
+setting of the @env{R_ARCH} environment variable determines the
+architecture which is run.
 
 When running post-install tests with sub-architectures, use
 
@@ -995,6 +989,8 @@ build you will also need
 The Tcl/Tk support files are in a zip file at
 @uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/}: unzip this in
 @var{R_HOME}, and it will add directory tree @file{@var{R_HOME}/Tcl}.
+Please make sure you get the right version: there is a 32-bit version
+and two 64-bit versions (for R 2.11.x and 2.12.x).
 
 @item
 You need @code{libpng} and @code{jpeg} sources (available, e.g., from
@@ -1404,7 +1400,7 @@ double-click on the icon.  Note that Tcl/Tk and the Fortran compiler
 need to be installed separately if needed (unlike for @R{} 2.9.x and
 earlier).
 
-See the @uref{http://CRAN.R-project.org/bin/macosx/RMacOSX-FAQ.html, R
+See the @uref{http://CRAN.R-project.org/@/bin/@/macosx/@/RMacOSX-FAQ.html, R
 for Mac OS X @acronym{FAQ}} for more details.
 
 @menu
@@ -1633,8 +1629,7 @@ R CMD INSTALL -l /path/to/library @var{pkg1} @var{pkg2} @dots{}
 The part @samp{-l /path/to/library} can be omitted, in which case the
 @enindex R_LIBS
 first library in @env{R_LIBS} is used if set, otherwise the main library
-@file{@var{R_HOME}/library} is used.  (@env{R_LIBS} is looked for in the
-environment: note that @file{.Renviron} is not read by @command{R CMD}.)
+@file{@var{R_HOME}/library} is used.
 @enindex TMPDIR
 Ensure that the environment variable @env{TMPDIR} is either unset (and
 @file{/tmp} exists and can be written in and executed from) or points to
@@ -1661,8 +1656,8 @@ ask the user (in an interactive session) if the default user library
 should be created, and if allowed to will install the packages there.
 
 
-If you want to fetch a package and all those it depends on that are
-not already installed, use e.g.
+If you want to fetch a package and all those it depends on (in any way)
+that are not already installed, use e.g.
 
 @example
 > install.packages("Rcmdr", dependencies = TRUE)
@@ -1919,12 +1914,12 @@ locale needs to specify
 @item
 A human language.  These are generally specified by a lower-case
 two-character abbreviation following ISO 639 (see e.g.@:
-@url{http://en.wikipedia.org/wiki/ISO_639-1}).
+@url{http://en.wikipedia.org/@/wiki/@/ISO_639-1}).
 
 @item
 A `territory', used mainly to specify the currency. These are generally
 specified by an upper-case two-character abbreviation following ISO 3166
-(see e.g.@: @url{http://@/en.wikipedia.org/wiki/ISO_3166}).  Sometimes
+(see e.g.@: @url{http://@/en.wikipedia.org/@/wiki/@/ISO_3166}).  Sometimes
 the combination of language and territory is used to specify the
 encoding, for example to distinguish between traditional and simplified
 Chinese.
@@ -1984,7 +1979,7 @@ if it defaults to @samp{C}.
 
 Internally Mac OS X uses a form similar to Linux but without specifying
 the encoding (which is @code{UTF-8}).  It is based on ICU locales
-(@uref{http://userguide.icu-project.org/locale}) and not POSIX ones.
+(@uref{http://userguide.icu-project.org/@/locale}) and not POSIX ones.
 
 
 @node Localization of messages,  , Locales, Internationalization
@@ -2352,7 +2347,7 @@ able to force static or dynamic linking  @emph{via}
 @noindent
 or by linking to explicit files (as in the @samp{test} target in
 @file{Makefile.win}: this makes two executables, @file{test.exe} which
-is dynamically linked, and @code{test-static}, which is statically
+is dynamically linked, and @file{test-static.exe}, which is statically
 linked).
 
 It is possible to link to @file{Rmath.dll} using other compilers, either
@@ -2447,9 +2442,9 @@ types: this is checked at configuration.
 A @command{tar} program is needed to unpack the sources and packages
 (including the recommended packages).  A version@footnote{Such as
 @acronym{GNU} @command{tar} 1.15 or later, @command{bsdtar} (from
-@uref{http://code.google.com/p/libarchive/}, as used by Mac OS 10.6) or
+@uref{http://code.google.com/@/p/libarchive/}, as used by Mac OS 10.6) or
 @command{tar} from the Heirloom Toolchest
-(@uref{http://heirloom.sourceforge.net/tools.html}.} that can
+(@uref{http://heirloom.sourceforge.net/@/tools.html}).} that can
 automagically detect compressed archives is preferred for use with
 @code{untar()}: the configure script looks for @command{gtar} and
 @command{gnutar} before
@@ -2530,7 +2525,7 @@ Roman and Courier New, and contain fonts rather similar to the first two
 
 The bitmapped graphics devices @code{jpeg()}, @code{png()} and
 @code{tiff()} need the appropriate headers and libraries installed:
-@code{jpeg} (version 6b or 7 or 8) or @code{libpng} (version 1.2.3 or
+@code{jpeg} (version 6b or later) or @code{libpng} (version 1.2.3 or
 later, including 1.4.0) and @code{zlib} (version 1.1.3 or later) or
 @code{libtiff} (any recent version of 3.x.y -- 3.8.2 and 3.9.1 have been
 tested) respectively.
@@ -2611,7 +2606,7 @@ or use the configure variables @code{TCLTK_LIBS} and
 @code{TCLTK_CPPFLAGS} to specify the flags needed for linking against
 the Tcl and Tk libraries and for finding the @file{tcl.h} and
 @file{tk.h} headers, respectively.  If you have both 32- and 64-bit
-versions of Tcl/Tk installed, setting the paths to the correct config
+versions of Tcl/Tk installed, specifying the paths to the correct config
 files may be necessary to avoid confusion between them.
 
 Versions of Tcl/Tk up to 8.5.8 have been tested (including most versions
@@ -2779,7 +2774,7 @@ file also describes how to build ATLAS as a shared library.
 
 ATLAS can also be used on Windows: see @pxref{Getting the source files}
 when building from source, and
-@uref{http://CRAN.R-project.org/bin/windows/rw-FAQ.html, R Windows
+@uref{http://CRAN.R-project.org/@/bin/@/windows/@/rw-FAQ.html, R Windows
 @acronym{FAQ}} for adding pre-compiled support to binary versions.
 
 @node ACML, Goto BLAS, ATLAS, BLAS
@@ -2942,7 +2937,7 @@ cases using a shared BLAS was as fast, provided high levels (e.g.,
 @option{-O3}) of compiler optimization are used.
 
 @item
-It is easy to change the BLAS without making to re-install @R{} and all
+It is easy to change the BLAS without needing to re-install @R{} and all
 the add-on packages, since all references to the BLAS go through
 @code{libRblas}, and that can be replaced.  Note though that any dynamic
 libraries the replacement links to will need to be found by the linker:
@@ -2972,11 +2967,11 @@ appropriate @file{lib} directory is in the run-time library path or
 Provision is made for using an external LAPACK library, principally to
 cope with BLAS libraries which contain a copy of LAPACK (such as
 @code{libsunperf} on Solaris, @code{vecLib} on Mac OS X and ACML on
-@cputype{ix86}/@cputype{x86_64} Linux and Solaris).  However, the likely
-performance gains are thought to be small (and may be negative), and the
-default is not to search for a suitable LAPACK library, and this is
-definitely @strong{not} recommended.  You can specify a specific LAPACK
-library or a search for a generic library by the configuration option
+@cputype{ix86}/@cputype{x86_64} Linux).  However, the likely performance
+gains are thought to be small (and may be negative), and the default is
+not to search for a suitable LAPACK library, and this is definitely
+@strong{not} recommended.  You can specify a specific LAPACK library or
+a search for a generic library by the configuration option
 @option{--with-lapack}.  The default for @option{--with-lapack} is to
 check the BLAS library and then look for an external library
 @samp{-llapack}.  Sites searching for the fastest possible linear
@@ -3265,7 +3260,7 @@ Irix 6.5 and Alpha/OSF1 (aka Tru64).
 
 To build in a separate directory you need a @command{make} that uses the
 @code{VPATH} variable, for example @acronym{GNU} @command{make}, or Sun
-@command{make} on Solaris 2.7 or later.
+@command{make} on Solaris 7 or later.
 
 @command{dmake} has also been used. e.g,@: on Solaris 10.
 
@@ -3603,7 +3598,7 @@ what is needed.
 
 It seems that @cputype{ix86} Linux accepts non-PIC code in shared
 libraries, but this is not necessarily so on other platforms, in
-particular for 64-bit @acronym{CPU}s such as @cputype{x86_64}.  So care
+particular on 64-bit @acronym{CPU}s such as @cputype{x86_64}.  So care
 can be needed with BLAS libraries and when building @R{} as a shared
 library to ensure that position-independent code is used in any static
 libraries (such as the Tcl/Tk libraries, @code{libpng}, @code{libjpeg}
@@ -3743,7 +3738,7 @@ LDFLAGS="-L$PG_HOME/libso -L/usr/lib64"
 @noindent
 Note particularly the last, which is needed to ensure that a shared
 version of @code{libc} is found.  The flag @option{-Kieee} ensures strict
-compliance to IEC60659.  Also,
+compliance to IEC60559.  Also,
 @uref{http://@/www.amd.com/@/us-en/@/assets/@/content_type/@/DownloadableAssets/@/dwamd_PGI_nov603.pdf}
 suggests that @option{-pc64} may be desirable.
 
@@ -3812,7 +3807,7 @@ to 10.5 (Leopard).  You will also need @command{gfortran} and
 @code{libreadline} (or configure with @option{--without-readline}).
 
 For more information on how to find these tools please read the
-@uref{http://CRAN.R-project.org/bin/macosx/RMacOSX-FAQ.html, R for Mac
+@uref{http://CRAN.R-project.org/@/bin/@/macosx/@/RMacOSX-FAQ.html, R for Mac
 OS X @acronym{FAQ}}.
 
 @c If you use the X window manager and prefer @code{Terminal.app} to
@@ -4012,7 +4007,7 @@ for both compiling and linking is best specified as part of the
 compiler.  The examples above use @samp{stlport4}, currently the most
 modern of the options: the default (but still needed to be specified as
 it is needed for linking) is @samp{Cstd} which dates from 1998: see
-@uref{http://developers.sun.com/solaris/articles/cmp_stlport_libCstd.html}.
+@uref{http://developers.sun.com/@/solaris/@/articles/@/cmp_stlport_libCstd.html}.
 Note though that most external Solaris C++ libraries will have been
 built with @samp{Cstd} and so an @R{} package using such a package also
 needs to be.  Occasionally the library flag @option{-lCrun} is needed.
@@ -4169,7 +4164,7 @@ directly from the AIX Installation DVDs, e.g., Java 6, X11, and Perl.
 Additional open source software (OSS) is packaged for AIX in @file{.rpm}
 files and available from both IBM's ``AIX Toolbox for Linux
 Applications''
-(@uref{http://www-03.ibm.com/systems/power/software/aix/linux/}) and
+(@uref{http://www-03.ibm.com/@/systems/@/power/@/software/@/aix/@/linux/}) and
 @uref{http://www.@/oss4aix.org/download/}.  The latter website typically
 offers more recent versions of the available OSS.  All tools needed and
 libraries downloaded from these repositories (e.g., GCC, Make,
@@ -4185,7 +4180,7 @@ install the corresponding package from the ICU project
 binaries for various platforms which in case of AIX can be installed via
 unpacking the tarball to the root file system.  For full @LaTeX{}
 support one can install the @TeX{} Live DVD distribution
-(@uref{http://www.tug.org/texlive/}): it is recommended to update the
+(@uref{http://www.tug.org/@/texlive/}): it is recommended to update the
 distribution using the @code{tlmgr} update manager.  For 64-bit R builds
 supporting Tcl/Tk this needs to installed from the sources as available
 pre-compiled binaries supply only 32-bit shared objects.
@@ -4194,7 +4189,7 @@ The recent WU testing was done using compilers from both the
 @acronym{GNU} Compiler Collection (version 4.2.4) which is available
 from one of the above OSS repositories, and the IBM C/C++ (XL C/C++
 10.01) as well as FORTRAN (XL Fortran 12.01) compilers
-(@url{http://www14.software.ibm.com/webapp/download/byproduct.jsp#X}).
+(@url{http://www14.software.ibm.com/@/webapp/@/download/@/byproduct.jsp#X}).
 
 To compile for a 64-bit @cputype{powerpc} (Power6 @acronym{CPU}) target
 one can use
@@ -4240,7 +4235,7 @@ environment, and to use @acronym{GNU} Make (e.g., via
 
 Further installation instructions to set up a proper R development
 environment can be found in the ``R on AIX'' project on R-Forge
-(@uref{http://R-Forge.R-project.org/projects/aix/}).
+(@uref{http://R-Forge.R-project.org/@/projects/@/aix/}).
 
 @node Cygwin, New platforms, AIX, Platform notes
 @section Cygwin
@@ -4287,7 +4282,7 @@ There are a number of sources of problems when installing @R {} on a new
 hardware/OS platform.  These include
 
 @strong{Floating Point Arithmetic}: @R{} requires arithmetic compliant
-with @acronym{IEC}@tie{}60559, also know as @acronym{IEEE}@tie{}754.
+with @acronym{IEC}@tie{}60559, also known as @acronym{IEEE}@tie{}754.
 This mandates the use of plus and minus infinity and @code{NaN} (not a
 number) as well as specific details of rounding.  Although almost all
 current FPUs can support this, selecting such support can be a pain.
@@ -4303,7 +4298,7 @@ directory.
 Beware of using high levels of optimization, at least initially.  On
 many compilers these reduce the degree of compliance to the
 @acronym{IEEE} model.  For example, using @option{-fast} on the Solaris
-SunPro compilers causes @R{}'s @code{NaN} to be set incorrectly.
+Sun Studio compilers causes @R{}'s @code{NaN} to be set incorrectly.
 
 @strong{Shared Libraries}: There seems to be very little agreement
 across platforms on what needs to be done to build shared libraries.
@@ -4551,7 +4546,7 @@ For the 64-bit toolchain, see @ref{Building R for 64-bit Windows}.
 @section Useful additional programs
 
 Developers of packages will find some of the `goodies' at
-@uref{http://www.stats.ox.ac.uk/pub/Rtools/goodies} useful.  
+@uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/@/goodies} useful.  
 
 There is a version of the @command{file} command that identifies the
 type of files, and is used by @command{Rcmd check} if available.
