--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -522,14 +522,14 @@ H.2.8, I.5.1}.
 
 Finally, an optional @samp{Language} field can be used to indicate if
 the package documentation is not in English: this should be a
-comma-separated list of 2-letter ISO 639-1
+comma-separated list of standard (not private use or grandfathered) IETF
+language tags as currently defined by RFC 5645
+(@uref{http://tools.ietf.org/html/rfc5645}, see also
+@uref{http://en.wikipedia.org/wiki/IETF_language_tag}), i.e., use
+language subtags which in essence are 2-letter ISO 639-1
 (@uref{http://en.@/wikipedia.@/org/wiki/ISO_639-1}) or 3-letter ISO
 639-3 (@uref{http://en.@/wikipedia.@/org/wiki/ISO_639-3}) language
-codes, or standard (not private use or grandfathered) IETF language tags
-as currently defined by RFC 4646
-(@uref{http://tools.ietf.org/html/rfc4646}, see also
-@uref{http://en.wikipedia.org/wiki/IETF_language_tag}).
-
+codes.
 
 @node The INDEX file, Package subdirectories, The DESCRIPTION file, Package structure
 @subsection The @file{INDEX} file
