Add parseLatex and related material
git-svn-id: https://svn.r-project.org/R/trunk@52331 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -194,6 +194,10 @@ NEW FEATURES
     o   Added support for subsetting "raster" objects, plus assigning
         to a subset, conversion to a matrix (of colour strings), and
         comparisons (== and !=).
+        
+    o	Added a new parseLatex() function (and related functions
+	deparseLatex() and latexToUtf8()) to support conversion of
+	bibliographic entries for display in R.
 
 
 DEPRECATED & DEFUNCT
