Fix strsplit bug, and remove workaround in r52333.
git-svn-id: https://svn.r-project.org/R/trunk@52340 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -370,6 +370,9 @@ BUG FIXES
 
     o	Text help rendering of \tabular{} has been improved: under
  	some circumstances leading blank columns were not rendered.
+ 	
+    o	strsplit(x, fixed=TRUE) marked UTF-8 strings with the local
+	encoding when no splits were found.    	
 
 
 
