more options for Rd text rendering
git-svn-id: https://svn.r-project.org/R/trunk@52351 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -201,6 +201,9 @@ NEW FEATURES
 	deparseLatex() and latexToUtf8()) to support conversion of
 	bibliographic entries for display in R.
 
+    o	Text rendering of \itemize in help used a Unicode bullet in
+	UTF-8 and single-byte Windows locales.
+
 
 DEPRECATED & DEFUNCT
 
