--- a/NEWS
+++ b/NEWS
@@ -201,8 +201,8 @@ NEW FEATURES
 	deparseLatex() and latexToUtf8()) to support conversion of
 	bibliographic entries for display in R.
 
-    o	Text rendering of \itemize in help used a Unicode bullet in
-	UTF-8 and single-byte Windows locales.
+    o	Text rendering of \itemize in help uses a Unicode bullet in
+	UTF-8 and most single-byte Windows locales.
 
 
 DEPRECATED & DEFUNCT
