use R-based Rdiff on Windows
git-svn-id: https://svn.r-project.org/R/trunk@52363 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-intro.texi
+++ b/doc/manual/R-intro.texi
@@ -7070,11 +7070,11 @@ Process Sweave documentation
 @item Rdiff
 Diff @R{} output ignoring headers etc
 @item config
-Obtain configuration information.
+Obtain configuration information
 @item javareconf
 (Unix only) Update the Java configuration variables
 @item rtags
-(Unix only) Create Emacs-style tag files from C, R, and Rd files
+Create Emacs-style tag files from C, R, and Rd files
 @item open
 (Windows only) Open a file via Windows' file associations
 @item texify
