--- a/doc/manual/R-intro.texi
+++ b/doc/manual/R-intro.texi
@@ -7074,7 +7074,7 @@ Obtain configuration information
 @item javareconf
 (Unix only) Update the Java configuration variables
 @item rtags
-Create Emacs-style tag files from C, R, and Rd files
+(Unix only) Create Emacs-style tag files from C, R, and Rd files
 @item open
 (Windows only) Open a file via Windows' file associations
 @item texify
